fix broken input icon size

--- a/less/base/_mixins.less
+++ b/less/base/_mixins.less
@@ -31,7 +31,7 @@
   .upf-input-feedback {
     i {
       display: block;
-      font-size: 1.5em;
+      font-size: 2em;
       position: absolute;
       right: 1rem;
       top: -3.3rem;
